@@ -64,6 +64,9 @@ kotlin {
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
+            implementation("org.openjfx:javafx-controls:${project.properties["javafxVersion"]}:${project.properties["javafxClassifier"]}")
+            implementation("org.openjfx:javafx-swing:${project.properties["javafxVersion"]}:${project.properties["javafxClassifier"]}")
+            implementation("org.openjfx:javafx-web:${project.properties["javafxVersion"]}:${project.properties["javafxClassifier"]}")
         }
     }
 }
@@ -100,6 +103,7 @@ compose.desktop {
             packageName = "com.swmansion.kmpmaps.sample"
             packageVersion = "1.0.0"
         }
+        jvmArgs += listOf("--add-modules", "javafx.controls,javafx.swing,javafx.web")
     }
 }
 
